# Eraser-CD

./: .gitignore  CMakeLists.txt  README.md
devaids/: ast_traversal.cpp  create_flamegraph.sh  diff_test.cpp  graph_visualisation.cpp  sqlite_test.cpp
digraph_construction/: CMakeLists.txt  construction_environment.cpp  construction_environment.h  parser.cpp
digraph_construction/database/include/: call_graph.h  database.h  function_cumulative_locksets.h  function_eraser_sets.h  function_variable_locksets.h
digraph_construction/database/src/: call_graph.cpp  database.cpp  function_cumulative_locksets.cpp  function_eraser_sets.cpp  function_variable_locksets.cpp
digraph_construction/include/: call_graph.h  construction_environment.h  cumulative_locksets.h  delta_lockset.h  diff_analysis.h  eraser_sets.h  graph_visualizer.h  over_approximated_static_eraser.h  parser.h  set_operations.h  variable_locksets.h
digraph_construction/src/: call_graph.cpp  construction_environment.cpp  cumulative_locksets.cpp  delta_lockset.cpp  diff_analysis.cpp  graph_visualizer.cpp  main.cpp  over_approximated_static_eraser.cpp  parser.cpp  variable_locksets.cpp
graph_nodes/: CMakeLists.txt  basic_node.cpp  break_node.cpp  break_node.h  continue_node.cpp  endif_node.cpp  (+19 more)
static_eraser/: CMakeLists.txt
static_eraser/database/include/: call_graph.h  database.h  eraser_settings.h  file_includes.h  function_eraser_sets.h  function_variable_locksets.h
static_eraser/database/src/: call_graph.cpp  database.cpp  eraser_settings.cpp  file_includes.cpp  function_cumulative_locksets.cpp  function_eraser_sets.cpp  function_variable_locksets.cpp
static_eraser/graph_nodes/include/: continue_node.h  eraser_ignore_off_node.h  eraser_ignore_on_node.h  graph_node.h  lock_node.h  node_types.h  read_node.h  start_node.h  thread_join_node.h  unlock_node.h  while_node.h
static_eraser/graph_nodes/src/: eraser_ignore_off_node.cpp  eraser_ignore_on_node.cpp  graph_node.cpp  lock_node.cpp  read_node.cpp  start_node.cpp  startwhile_node.cpp  thread_create_node.cpp  thread_join_node.cpp  unlock_node.cpp  write_node.cpp
static_eraser/include/: construction_environment.h  cumulative_locksets.h  debug_tools.h  delta_lockset.h  diff_analysis.h  eraser_sets.h  parser.h  set_operations.h  variable_locks.h  variable_locksets.h
static_eraser/src/: construction_environment.cpp  cumulative_locksets.cpp  delta_lockset.cpp  diff_analysis.cpp  graph_visualizer.cpp  main.cpp  parser.cpp  variable_locksets.cpp
(+172 files in other folders)
